fix: vertical spacing between WYSIWYG/text area fields

--- a/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
@@ -71,10 +71,10 @@ h4:not([class]),
 h5:not([class]),
 h6:not([class]) {
   margin-top: 0;
-  margin-bottom: hb-calculate-rems(22px);
+  margin-bottom: hb-calculate-rems(20px);
 
   @include grid-media-min('md') {
-    margin-bottom: hb-calculate-rems(28px);
+    margin-bottom: hb-calculate-rems(24px);
   }
 }
 
