--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -58,7 +58,7 @@
     font-weight: hb-theme-font-weight(semibold);
     line-height: 110%;
     margin-top: 0;
-    margin-bottom: hb-calculate-rems(22px);
+    margin-bottom: hb-calculate-rems(20px);
 
     @include hb-colorful {
       color: hb-colorful-variation(primary);
@@ -67,7 +67,7 @@
     @include grid-media-min('md') {
       font-size: hb-calculate-rems(34px);
       line-height: 112%;
-      margin-bottom: hb-calculate-rems(28px);
+      margin-bottom: hb-calculate-rems(24px);
     }
 
     @include grid-media-min('lg') {
